making better UI, and fixing minor bugs

--- a/app/src/main/res/layout/adddialog.xml
+++ b/app/src/main/res/layout/adddialog.xml
@@ -76,7 +76,7 @@
             android:id="@+id/txtPrice" />
 
         <EditText
-            android:text="Price"
+            android:hint="Price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="number"
