--- a/app/src/main/res/layout/moneylist.xml
+++ b/app/src/main/res/layout/moneylist.xml
@@ -20,57 +20,105 @@
         android:id="@+id/txtBuying"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="현찰 살 때"
+        android:textSize="12sp"
+        android:layout_margin="2dip"
+        android:paddingLeft="7dp"
+        android:textColor="#000000"
+        android:ems="5"
+        android:layout_below="@+id/txtCurrencyName"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:id="@+id/txtBuyingValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="1092.23"
         android:textSize="12sp"
         android:layout_margin="2dip"
-        android:paddingLeft="14dp"
-        android:paddingTop="7dp"
-        android:paddingBottom="4dp"
-        android:ems="5"
+        android:paddingLeft="20dp"
+        android:ems="10"
         android:textColor="#000000"
-        android:layout_toRightOf="@+id/txtCurrencyName"/>
+        android:layout_below="@+id/txtCurrencyName"
+        android:layout_toRightOf="@+id/txtBuying"/>
 
     <TextView
         android:id="@+id/txtSelling"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1110.23"
+        android:text="현찰 팔 때"
         android:textSize="12sp"
         android:layout_margin="2dip"
         android:paddingLeft="7dp"
-        android:paddingTop="7dp"
-        android:paddingBottom="4dp"
         android:ems="5"
         android:textColor="#000000"
-        android:layout_toRightOf="@+id/txtBuying"/>
+        android:layout_below="@+id/txtBuying"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:id="@+id/txtSellingValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1110.23"
+        android:textSize="12sp"
+        android:layout_margin="2dip"
+        android:paddingLeft="20dp"
+        android:ems="10"
+        android:textColor="#000000"
+        android:layout_below="@+id/txtBuying"
+        android:layout_toRightOf="@+id/txtSelling"/>
 
     <TextView
         android:id="@+id/txtSending"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1200.23"
+        android:text="송금 보낼 때"
         android:textSize="12sp"
         android:layout_margin="2dip"
         android:paddingLeft="7dp"
-        android:paddingTop="7dp"
-        android:paddingBottom="4dp"
         android:ems="5"
         android:textColor="#000000"
-        android:layout_toRightOf="@+id/txtSelling"/>
+        android:layout_below="@+id/txtSelling"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:id="@+id/txtSendingValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1200.23"
+        android:textSize="12sp"
+        android:layout_margin="2dip"
+        android:paddingLeft="20dp"
+        android:ems="10"
+        android:textColor="#000000"
+        android:layout_below="@+id/txtSelling"
+        android:layout_toRightOf="@+id/txtSending"/>
 
     <TextView
         android:id="@+id/txtReceiving"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1392.23"
+        android:text="송금 받을 때"
         android:textSize="12sp"
         android:layout_margin="2dip"
         android:paddingLeft="7dp"
-        android:paddingTop="7dp"
-        android:paddingBottom="4dp"
         android:ems="5"
         android:textColor="#000000"
-        android:layout_toRightOf="@+id/txtSending"/>
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/txtSending"/>
+
+    <TextView
+        android:id="@+id/txtReceivingValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1392.23"
+        android:textSize="12sp"
+        android:layout_margin="2dip"
+        android:paddingLeft="20dp"
+        android:ems="10"
+        android:textColor="#000000"
+        android:layout_below="@+id/txtSending"
+        android:layout_toRightOf="@+id/txtReceiving"/>
 
 
 </RelativeLayout>
