--- a/app/src/main/res/layout/tab2.xml
+++ b/app/src/main/res/layout/tab2.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/btnRemoveAll"
         android:layout_marginBottom="498dp"
         android:id="@+id/btnAdd" />
 
@@ -18,8 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/btnAdd"
         android:layout_marginBottom="498dp"
+        android:layout_toLeftOf="@+id/btnRefresh"
         android:id="@+id/btnRemoveAll" />
 
     <Button
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/btnRemoveAll"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="498dp"
         android:id="@+id/btnRefresh" />
 
@@ -36,7 +36,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/lstAlert"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
