--- a/app/src/main/res/layout/moneylist.xml
+++ b/app/src/main/res/layout/moneylist.xml
@@ -20,7 +20,7 @@
         android:id="@+id/txtBuying"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="현찰 살 때"
+        android:text="@string/STANDARD_BUYING"
         android:textSize="12sp"
         android:layout_margin="2dip"
         android:paddingLeft="7dp"
@@ -46,7 +46,7 @@
         android:id="@+id/txtSelling"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="현찰 팔 때"
+        android:text="@string/STANDARD_SELLING"
         android:textSize="12sp"
         android:layout_margin="2dip"
         android:paddingLeft="7dp"
@@ -72,7 +72,7 @@
         android:id="@+id/txtSending"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="송금 보낼 때"
+        android:text="@string/STANDARD_SENDING"
         android:textSize="12sp"
         android:layout_margin="2dip"
         android:paddingLeft="7dp"
@@ -98,7 +98,7 @@
         android:id="@+id/txtReceiving"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="송금 받을 때"
+        android:text="@string/STANDARD_RECEIVING"
         android:textSize="12sp"
         android:layout_margin="2dip"
         android:paddingLeft="7dp"
