--- a/app/src/main/res/layout/adddialog.xml
+++ b/app/src/main/res/layout/adddialog.xml
@@ -10,10 +10,9 @@
         android:id="@+id/rLayoutCurrency">
 
         <TextView
-            android:text="Currency"
+            android:text="통화명"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:id="@+id/txtCurrency" />
@@ -22,7 +21,6 @@
             android:text="Currency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/txtCurrency"
             android:layout_centerVertical="true"
             android:layout_marginLeft="30dp"
@@ -40,7 +38,7 @@
         android:layout_marginTop="19dp">
 
         <TextView
-            android:text="Standard"
+            android:text="기준"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -68,7 +66,7 @@
         android:layout_marginTop="19dp">
 
         <TextView
-            android:text="Price"
+            android:text="가격(KRW)"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
