--- a/app/src/main/res/layout/moneylist.xml
+++ b/app/src/main/res/layout/moneylist.xml
@@ -1,124 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent" android:layout_height="fill_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent" android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/txtCurrencyName"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="USD"
-        android:textSize="15sp"
-        android:layout_margin="2dip"
-        android:paddingLeft="7dp"
-        android:paddingTop="7dp"
-        android:paddingBottom="4dp"
-        android:textColor="#000000"
-        android:layout_alignParentStart="true"/>
-
-    <TextView
-        android:id="@+id/txtBuying"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/STANDARD_BUYING"
-        android:textSize="12sp"
-        android:layout_margin="2dip"
-        android:paddingLeft="7dp"
-        android:textColor="#000000"
-        android:ems="5"
-        android:layout_below="@+id/txtCurrencyName"
-        android:layout_alignParentStart="true"/>
-
-    <TextView
-        android:id="@+id/txtBuyingValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1092.23"
-        android:textSize="12sp"
-        android:layout_margin="2dip"
-        android:paddingLeft="20dp"
-        android:ems="10"
-        android:textColor="#000000"
-        android:layout_below="@+id/txtCurrencyName"
-        android:layout_toRightOf="@+id/txtBuying"/>
-
-    <TextView
-        android:id="@+id/txtSelling"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/STANDARD_SELLING"
-        android:textSize="12sp"
-        android:layout_margin="2dip"
-        android:paddingLeft="7dp"
-        android:ems="5"
-        android:textColor="#000000"
-        android:layout_below="@+id/txtBuying"
-        android:layout_alignParentStart="true"/>
-
-    <TextView
-        android:id="@+id/txtSellingValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1110.23"
-        android:textSize="12sp"
-        android:layout_margin="2dip"
-        android:paddingLeft="20dp"
-        android:ems="10"
-        android:textColor="#000000"
-        android:layout_below="@+id/txtBuying"
-        android:layout_toRightOf="@+id/txtSelling"/>
-
-    <TextView
-        android:id="@+id/txtSending"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/STANDARD_SENDING"
-        android:textSize="12sp"
-        android:layout_margin="2dip"
-        android:paddingLeft="7dp"
-        android:ems="5"
-        android:textColor="#000000"
-        android:layout_below="@+id/txtSelling"
-        android:layout_alignParentStart="true"/>
-
-    <TextView
-        android:id="@+id/txtSendingValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1200.23"
-        android:textSize="12sp"
-        android:layout_margin="2dip"
-        android:paddingLeft="20dp"
-        android:ems="10"
-        android:textColor="#000000"
-        android:layout_below="@+id/txtSelling"
-        android:layout_toRightOf="@+id/txtSending"/>
-
-    <TextView
-        android:id="@+id/txtReceiving"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/STANDARD_RECEIVING"
-        android:textSize="12sp"
-        android:layout_margin="2dip"
-        android:paddingLeft="7dp"
-        android:ems="5"
-        android:textColor="#000000"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/txtSending"/>
+        android:id="@+id/rLayoutMoneyList">
+        <TextView
+            android:id="@+id/txtCurrencyName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="USD"
+            android:textSize="15sp"
+            android:layout_margin="2dip"
+            android:paddingLeft="7dp"
+            android:paddingTop="7dp"
+            android:paddingBottom="4dp"
+            android:textColor="#000000"
+            android:layout_alignParentStart="true"/>
 
-    <TextView
-        android:id="@+id/txtReceivingValue"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/txtBuying"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/STANDARD_BUYING"
+            android:textSize="12sp"
+            android:layout_margin="2dip"
+            android:paddingLeft="7dp"
+            android:textColor="#000000"
+            android:ems="5"
+            android:layout_below="@+id/txtCurrencyName"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:id="@+id/txtBuyingValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1092.23"
+            android:textSize="12sp"
+            android:layout_margin="2dip"
+            android:paddingLeft="20dp"
+            android:ems="10"
+            android:textColor="#000000"
+            android:layout_below="@+id/txtCurrencyName"
+            android:layout_toRightOf="@+id/txtBuying"/>
+
+        <TextView
+            android:id="@+id/txtSelling"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/STANDARD_SELLING"
+            android:textSize="12sp"
+            android:layout_margin="2dip"
+            android:paddingLeft="7dp"
+            android:ems="5"
+            android:textColor="#000000"
+            android:layout_below="@+id/txtBuying"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:id="@+id/txtSellingValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1110.23"
+            android:textSize="12sp"
+            android:layout_margin="2dip"
+            android:paddingLeft="20dp"
+            android:ems="10"
+            android:textColor="#000000"
+            android:layout_below="@+id/txtBuying"
+            android:layout_toRightOf="@+id/txtSelling"/>
+
+        <TextView
+            android:id="@+id/txtSending"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/STANDARD_SENDING"
+            android:textSize="12sp"
+            android:layout_margin="2dip"
+            android:paddingLeft="7dp"
+            android:ems="5"
+            android:textColor="#000000"
+            android:layout_below="@+id/txtSelling"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:id="@+id/txtSendingValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1200.23"
+            android:textSize="12sp"
+            android:layout_margin="2dip"
+            android:paddingLeft="20dp"
+            android:ems="10"
+            android:textColor="#000000"
+            android:layout_below="@+id/txtSelling"
+            android:layout_toRightOf="@+id/txtSending"/>
+
+        <TextView
+            android:id="@+id/txtReceiving"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/STANDARD_RECEIVING"
+            android:textSize="12sp"
+            android:layout_margin="2dip"
+            android:paddingLeft="7dp"
+            android:ems="5"
+            android:textColor="#000000"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/txtSending"/>
+
+        <TextView
+            android:id="@+id/txtReceivingValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1392.23"
+            android:textSize="12sp"
+            android:layout_margin="2dip"
+            android:paddingLeft="20dp"
+            android:ems="10"
+            android:textColor="#000000"
+            android:layout_below="@+id/txtSending"
+            android:layout_toRightOf="@+id/txtReceiving"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="1392.23"
-        android:textSize="12sp"
-        android:layout_margin="2dip"
-        android:paddingLeft="20dp"
-        android:ems="10"
-        android:textColor="#000000"
-        android:layout_below="@+id/txtSending"
-        android:layout_toRightOf="@+id/txtReceiving"/>
+        android:layout_alignParentStart="true"
+        android:id="@+id/rLayoutAds">
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/junmond_banner_ad_unit_id_test">
+        </com.google.android.gms.ads.AdView>
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
